0.1-alpha2/_sources/population/UGS.rst.txt
Uganda *An. gambiae*
====================



The tables below list signals of recent selection discovered in the
Uganda *An. gambiae* population.



Chromosome arm 2R
-----------------



.. raw:: html
    :file: UGS.2R.signals.html

.. cssclass:: table-hover
.. csv-table::
    :widths: auto
    :header: Signal,Focus,Score (Left | Right)

    :doc:`../signal/H12/UGS/2/1/index`, "2R:28,420,001-28,520,000", 1230 (582 | 647)
    :doc:`../signal/H12/UGS/2/5/index`, "2R:34,160,001-34,340,000", 85 (60 | 25)
    




Chromosome arm 2L
-----------------



.. raw:: html
    :file: UGS.2L.signals.html

.. cssclass:: table-hover
.. csv-table::
    :widths: auto
    :header: Signal,Focus,Score (Left | Right)

    :doc:`../signal/H12/UGS/2/2/index`, "2L:2,520,001-3,120,000", 982 (573 | 409)
    :doc:`../signal/H12/UGS/2/3/index`, "2L:34,040,001-34,140,000", 954 (410 | 543)
    :doc:`../signal/H12/UGS/2/4/index`, "2L:42,760,001-42,800,000", 105 (63 | 41)
    




Chromosome arm 3R
-----------------



.. raw:: html
    :file: UGS.3R.signals.html

.. cssclass:: table-hover
.. csv-table::
    :widths: auto
    :header: Signal,Focus,Score (Left | Right)

    :doc:`../signal/H12/UGS/3/1/index`, "3R:28,560,001-28,620,000", 750 (426 | 323)
    :doc:`../signal/H12/UGS/3/2/index`, "3R:49,600,001-49,820,000", 300 (90 | 210)
    :doc:`../signal/H12/UGS/3/3/index`, "3R:44,000,001-44,060,000", 241 (171 | 70)
    :doc:`../signal/H12/UGS/3/4/index`, "3R:18,700,001-18,820,000", 195 (88 | 107)
    :doc:`../signal/H12/UGS/3/6/index`, "3R:36,320,001-36,560,000", 96 (76 | 20)
    




Chromosome arm 3L
-----------------



.. raw:: html
    :file: UGS.3L.signals.html

.. cssclass:: table-hover
.. csv-table::
    :widths: auto
    :header: Signal,Focus,Score (Left | Right)

    :doc:`../signal/H12/UGS/3/5/index`, "3L:36,240,001-36,300,000", 100 (79 | 21)
    




Chromosome X
------------



.. raw:: html
    :file: UGS.X.signals.html

.. cssclass:: table-hover
.. csv-table::
    :widths: auto
    :header: Signal,Focus,Score (Left | Right)

    :doc:`../signal/H12/UGS/X/1/index`, "X:15,320,001-15,460,000", 384 (293 | 90)
    




Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/population/UGS';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


