0.1-alpha3/_sources/population/UGS.rst.txt
Uganda *An. gambiae*
====================



The tables below list signals of recent selection discovered in the
Uganda *An. gambiae* population.



Chromosome arm 2R
-----------------



.. raw:: html
    :file: UGS.2R.signals.html

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/IHS/UGS/2/1/index`
      - IHS
      - Uganda *An. gambiae*
      - 2R:28,280,000-28,700,000
      - 1,661
      - 100.0%
      - Cyp6p
    * - :doc:`../signal/H12/UGS/2/1/index`
      - H12
      - Uganda *An. gambiae*
      - 2R:28,460,000-28,500,000
      - 1,567
      - 99.2%
      - Cyp6p
    * - :doc:`../signal/XPEHH/UGS.GWA/2/1/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 2R:28,460,000-28,600,000
      - 758
      - 99.7%
      - Cyp6p
    * - :doc:`../signal/XPEHH/UGS.BFS/2/1/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 2R:27,980,000-28,280,000
      - 753
      - 99.9%
      - 
    * - :doc:`../signal/XPEHH/UGS.CMS/2/1/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 2R:28,860,000-28,980,000
      - 645
      - 99.7%
      - 
    * - :doc:`../signal/XPEHH/UGS.BFS/2/3/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 2R:57,280,000-57,620,000
      - 376
      - 99.5%
      - 
    * - :doc:`../signal/XPEHH/UGS.CMS/2/2/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 2R:58,120,000-58,520,000
      - 348
      - 99.6%
      - 
    * - :doc:`../signal/XPEHH/UGS.GWA/2/3/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 2R:50,960,000-51,100,000
      - 225
      - 90.2%
      - 
    * - :doc:`../signal/IHS/UGS/2/5/index`
      - IHS
      - Uganda *An. gambiae*
      - 2R:40,160,000-40,200,000
      - 132
      - 98.3%
      - 
    * - :doc:`../signal/H12/UGS/2/4/index`
      - H12
      - Uganda *An. gambiae*
      - 2R:51,020,000-51,120,000
      - 117
      - 94.7%
      - 
    





Chromosome arm 2L
-----------------



.. raw:: html
    :file: UGS.2L.signals.html

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/H12/UGS/2/2/index`
      - H12
      - Uganda *An. gambiae*
      - 2L:1,814,895-3,094,895
      - 1,377
      - 100.0%
      - Vgsc
    * - :doc:`../signal/H12/UGS/2/3/index`
      - H12
      - Uganda *An. gambiae*
      - 2L:34,074,895-34,134,895
      - 1,193
      - 98.1%
      - 
    * - :doc:`../signal/IHS/UGS/2/2/index`
      - IHS
      - Uganda *An. gambiae*
      - 2L:33,934,895-34,194,895
      - 860
      - 100.0%
      - 
    * - :doc:`../signal/XPEHH/UGS.BFS/2/2/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 2L:34,134,895-34,234,895
      - 487
      - 98.3%
      - 
    * - :doc:`../signal/XPEHH/UGS.GWA/2/2/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 2L:34,114,895-34,214,895
      - 422
      - 95.2%
      - 
    * - :doc:`../signal/XPEHH/UGS.CMS/2/3/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 2L:34,134,895-34,234,895
      - 342
      - 99.2%
      - 
    * - :doc:`../signal/IHS/UGS/2/3/index`
      - IHS
      - Uganda *An. gambiae*
      - 2L:14,914,895-15,074,895
      - 282
      - 98.9%
      - 
    * - :doc:`../signal/IHS/UGS/2/4/index`
      - IHS
      - Uganda *An. gambiae*
      - 2L:42,794,895-42,834,895
      - 155
      - 97.5%
      - 
    * - :doc:`../signal/XPEHH/UGS.BFS/2/4/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 2L:14,374,895-14,554,895
      - 152
      - 87.9%
      - 
    * - :doc:`../signal/IHS/UGS/2/6/index`
      - IHS
      - Uganda *An. gambiae*
      - 2L:43,554,895-43,674,895
      - 118
      - 97.5%
      - 
    * - :doc:`../signal/H12/UGS/2/5/index`
      - H12
      - Uganda *An. gambiae*
      - 2L:42,774,895-42,814,895
      - 98
      - 94.4%
      - 
    * - :doc:`../signal/XPEHH/UGS.CMS/2/4/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 2L:14,374,895-14,554,895
      - 92
      - 91.4%
      - 
    





Chromosome arm 3R
-----------------



.. raw:: html
    :file: UGS.3R.signals.html

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/H12/UGS/3/1/index`
      - H12
      - Uganda *An. gambiae*
      - 3R:28,560,000-28,600,000
      - 876
      - 97.3%
      - Gste
    * - :doc:`../signal/XPEHH/UGS.GWA/3/1/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 3R:28,540,000-28,600,000
      - 662
      - 100.0%
      - Gste
    * - :doc:`../signal/IHS/UGS/3/1/index`
      - IHS
      - Uganda *An. gambiae*
      - 3R:28,440,000-28,640,000
      - 493
      - 99.7%
      - Gste
    * - :doc:`../signal/H12/UGS/3/2/index`
      - H12
      - Uganda *An. gambiae*
      - 3R:49,660,000-49,880,000
      - 427
      - 93.3%
      - 
    * - :doc:`../signal/IHS/UGS/3/2/index`
      - IHS
      - Uganda *An. gambiae*
      - 3R:18,760,000-19,000,000
      - 327
      - 92.9%
      - 
    * - :doc:`../signal/XPEHH/UGS.CMS/3/1/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 3R:37,120,000-37,200,000
      - 300
      - 99.5%
      - 
    * - :doc:`../signal/H12/UGS/3/3/index`
      - H12
      - Uganda *An. gambiae*
      - 3R:44,380,000-45,140,000
      - 292
      - 95.0%
      - 
    * - :doc:`../signal/XPEHH/UGS.CMS/3/2/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 3R:43,940,000-43,980,000
      - 263
      - 99.7%
      - 
    * - :doc:`../signal/XPEHH/UGS.BFS/3/1/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 3R:37,140,000-37,220,000
      - 247
      - 99.6%
      - 
    * - :doc:`../signal/XPEHH/UGS.BFS/3/2/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 3R:43,920,000-43,980,000
      - 214
      - 99.7%
      - 
    * - :doc:`../signal/H12/UGS/3/4/index`
      - H12
      - Uganda *An. gambiae*
      - 3R:18,780,000-19,000,000
      - 210
      - 72.4%
      - 
    * - :doc:`../signal/H12/UGS/3/5/index`
      - H12
      - Uganda *An. gambiae*
      - 3R:36,460,000-37,520,000
      - 206
      - 94.0%
      - 
    * - :doc:`../signal/XPEHH/UGS.CMS/3/3/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 3R:6,360,000-6,400,000
      - 201
      - 99.9%
      - 
    * - :doc:`../signal/IHS/UGS/3/3/index`
      - IHS
      - Uganda *An. gambiae*
      - 3R:43,800,000-43,920,000
      - 160
      - 97.7%
      - 
    * - :doc:`../signal/XPEHH/UGS.BFS/3/4/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 3R:6,360,000-6,400,000
      - 137
      - 99.9%
      - 
    * - :doc:`../signal/XPEHH/UGS.GWA/3/2/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 3R:6,360,000-6,400,000
      - 120
      - 99.3%
      - 
    * - :doc:`../signal/XPEHH/UGS.BFS/3/6/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 3R:44,440,000-44,520,000
      - 95
      - 99.7%
      - 
    * - :doc:`../signal/XPEHH/UGS.GWA/3/3/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 3R:43,940,000-44,000,000
      - 93
      - 99.7%
      - 
    * - :doc:`../signal/XPEHH/UGS.BFS/3/5/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 3R:49,540,000-49,660,000
      - 93
      - 98.9%
      - 
    





Chromosome arm 3L
-----------------



.. raw:: html
    :file: UGS.3L.signals.html

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/XPEHH/UGS.CMS/3/4/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 3L:16,319,316-16,359,316
      - 149
      - 100.0%
      - 
    * - :doc:`../signal/XPEHH/UGS.BFS/3/3/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 3L:16,319,316-16,359,316
      - 138
      - 100.0%
      - 
    





Chromosome X
------------



.. raw:: html
    :file: UGS.X.signals.html

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/IHS/UGS/X/1/index`
      - IHS
      - Uganda *An. gambiae*
      - X:14,640,000-15,360,000
      - 517
      - 96.7%
      - Cyp9k1
    * - :doc:`../signal/H12/UGS/X/1/index`
      - H12
      - Uganda *An. gambiae*
      - X:15,160,000-15,480,000
      - 348
      - 94.9%
      - Cyp9k1
    * - :doc:`../signal/XPEHH/UGS.CMS/X/1/index`
      - XPEHH
      - Uganda *An. gambiae*
      - X:15,240,000-15,460,000
      - 284
      - 99.9%
      - Cyp9k1
    * - :doc:`../signal/XPEHH/UGS.BFS/X/1/index`
      - XPEHH
      - Uganda *An. gambiae*
      - X:14,960,000-15,320,000
      - 204
      - 89.8%
      - Cyp9k1
    





Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/population/UGS';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


